# flexcheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPONSORING.md  pyproject.toml
.github/: workflow.yml
.github/workflows/: pypi-publish-prerelease.yml
flexcheck/: __init__.py
test/: test_manager.py
