[tool.poetry]
name = "flexcheck"
version = "0.0.1"
description = "Modular and extensible data validation library with plugin support."
authors = ["Tamia Team <tech@tamia.team>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "flexcheck", from = "." }
]

keywords = ["validation", "plugins", "data-validation", "extensible", "modular", "python", "multi-language"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # For unit tests
pytest-cov = "^3.0"  # For test coverage

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

